--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form id="form">
+		<h1>Login Form</h1>
+		
+		<input type="text" id="username" placeholder="Username"><br><br>
+		<input type="password" id="password" placeholder="Password"><br><br>
+		<input type="checkbox" id="checkbox"><label for="checkbox">Remember me</label><br><br>
+		<input type="submit" id="submit" value="Submit"><br><br>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
