--- a/main.html
+++ b/main.html
@@ -10,8 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<form id="form">
 		<h1>Login Form</h1>
-		
+		<label for="username">Username</label><br>
 		<input type="text" id="username" placeholder="Username"><br><br>
+		<label for="password">Password</label><br>
 		<input type="password" id="password" placeholder="Password"><br><br>
 		<input type="checkbox" id="checkbox"><label for="checkbox">Remember me</label><br><br>
 		<input type="submit" id="submit" value="Submit"><br><br>
