--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
 		<input type="password" id="password" placeholder="Password"><br><br>
 		<input type="checkbox" id="checkbox"><label for="checkbox">Remember me:</label><br><br>
 		<input type="submit" id="submit" value="Submit"><br><br>
+		<button style="display: none;" onclick="showAlert()" type="submit" id="existing">Login as existing user.</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
